--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,8 +7,8 @@
 <body>
 <a href="/HSPages">호섭♥</a>
 <a href="/SWPages">신욱♥</a>
-<a href="/JYPages">지윤♥</a>
+<a href="/JYPages">지윤★</a>
 <a href="/KMPages">광명♥</a>
-<a href="/YHPages">윤하★</a>
+<a href="/YHPages">윤하♥</a>
 </body>
 </html>
