--- a/src/main/resources/templates/YHPages/yHmemberLogin.html
+++ b/src/main/resources/templates/YHPages/yHmemberLogin.html
@@ -5,8 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<a href="/member/save">회원가입</a>
-<a href="/member/login">로그인</a>
-<a href="/board/list">글목록</a>
+<h2>로그인</h2>
 </body>
 </html>
