회원정보,이미지파일 저장처리

--- a/src/main/resources/templates/YHPages/index.html
+++ b/src/main/resources/templates/YHPages/index.html
@@ -5,8 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<a href="/member/save">회원가입</a>
-<a href="/member/login">로그인</a>
-<a href="/board/list">글목록</a>
+<a href="/yhMember/save">회원가입</a>
+<a href="/yhMember/login">로그인</a>
+<a href="/yhBoard/list">글목록</a>
 </body>
 </html>
