--- a/src/main/resources/templates/YHPages/yhMemberSave.html
+++ b/src/main/resources/templates/YHPages/yhMemberSave.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form id="saveForm" onsubmit="saveMember(event)" name="saveForm" action="/member/save" method="post"
+<form id="saveForm" onsubmit="saveMember(event)" name="saveForm" action="/yhMember/save" method="post"
       enctype="multipart/form-data">
     <label for="memberName">이름</label>
     <input type="text" name="memberName" id="memberName"><br>
