--- a/src/main/resources/templates/HSPages/hsMemberPages/hsMemberSave.html
+++ b/src/main/resources/templates/HSPages/hsMemberPages/hsMemberSave.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <th:block th:replace="HSPages/hsComponent/hsConfig :: config"></th:block>
+  <th:block th:replace="HSPages/hsComponent/hsConfig :: config"></th:block>
 </head>
 <body>
 <div th:replace="HSPages/hsComponent/hsComponent :: header"></div>
 <div th:replace="HSPages/hsComponent/hsComponent :: nav"></div>
 <section>
-    <div>
-        <h2>안녕 나는 메인</h2>
-    </div>
+  <div>
+    <h2>안녕 나는 회원가입</h2>
+  </div>
 </section>
 <div th:replace="HSPages/hsComponent/hsComponent :: footer"></div>
 </body>
