--- a/src/main/resources/templates/YHPages/yhBoardPages/yhBoardList.html
+++ b/src/main/resources/templates/YHPages/yhBoardPages/yhBoardList.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<h2>로그인</h2>
+<h2>list.html</h2>
+<div>
+    <button th:onclick="goPage()">mypage</button>
+</div>
 </body>
 </html>
