--- a/src/main/resources/static/css/hsCss/hsMain.css
+++ b/src/main/resources/static/css/hsCss/hsMain.css
@@ -54,3 +54,27 @@ footer {
 footer div {
     padding: 12px;
 }
+table,tr,td {
+    padding: 10px;
+}
+#memberSaveBtn {
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 10px;
+    width: 100%;
+    height: 40px;
+    background-color: #6ea8fe;
+    border: none;
+    border-radius: 30px;
+}
+#memberEmail,#memberPassword,#memberPassword1,#memberName {
+    width:100%;
+    height: 25px;
+    outline: none;
+}
+#memberNum1,#memberNum2,#memberNum3,#memberYY,#memberDD,#memberMM {
+    width: 80px;
+    height: 29px;
+    outline: none;
+    box-sizing: border-box;
+}
