로그인 준비

--- a/src/main/resources/templates/SWPages/index.html
+++ b/src/main/resources/templates/SWPages/index.html
@@ -8,7 +8,8 @@
 <div th:replace="SWPages/component/nav :: nav"></div>
 <div id="section">
     <a href="/sw/member/save">회원가입</a>
-    <a href="/sw/board/login">로그인</a>
+    <a href="/sw/member/login">로그인</a>
+    <a href="/sw/member/list">글 목록</a>
 </div>
 <div th:replace="SWPages/component/footer :: footer"></div>
 </body>
