--- a/src/main/resources/templates/SWPages/component/nav.html
+++ b/src/main/resources/templates/SWPages/component/nav.html
@@ -14,7 +14,7 @@
                     <a class="nav-link active" aria-current="page" href="/sw/member/save">회원가입</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/sw/board/login">로그인</a>
+                    <a class="nav-link active" aria-current="page" href="/sw/member/login">로그인</a>
                 </li>
             </ul>
             <form class="d-flex">
