--- a/src/main/resources/templates/SWPages/memberPages/memberSave.html
+++ b/src/main/resources/templates/SWPages/memberPages/memberSave.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <th:block th:replace="SWPages/component/config"></th:block>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
 <div th:replace="SWPages/component/header :: header"></div>
@@ -11,8 +12,9 @@
      <h2 style="text-align: center">회원가입</h2>
     <form action="/sw/member/save" method="post" enctype="multipart/form-data">
         <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="member-email" name="memberEmail" placeholder="name@example.com">
+            <input type="email" class="form-control" id="member-email" name="memberEmail" placeholder="name@example.com" onblur="email_check()">
             <label for="member-email">Email</label>
+            <span id="email-bottom"></span>
         </div>
         <div class="form-floating mb-3">
             <input type="password" class="form-control" id="member-password" name="memberPassword">
@@ -34,7 +36,7 @@
             <input type="file" class="form-control" id="member-file" name="swMemberFile">
             <label for="member-file">프로필사진</label>
         </div>
-        <input type="submit" class="btn btn-primary" value="회원가입">
+        <input type="submit" id="submit-button" disabled="disabled" class="btn btn-primary" value="회원가입">
         <input type="button" class="btn btn-danger" value="뒤로" onclick="back()">
 
     </form>
@@ -46,6 +48,22 @@
     const back = () => {
         history.back();
     }
+    const email_check = () => {
+        const typingEmail = document.getElementById("member-email").value;
+        axios({
+            method: "post",
+            url: "/sw/email_check",
+            data: {
+                memberEmail: typingEmail
+            }
+        }).then(res => {
+            document.getElementById("submit-button").disabled = false;
+            alert("이메일 사용 가능")
+        }).catch(err => {
+            document.getElementById("submit-button").disabled = true;
+            alert("중복된 이메일입니다")
+        });
+    };
 </script>
 
 </html>
