--- a/src/main/resources/templates/JYPages/jyMemberPages/jyMemberMain.html
+++ b/src/main/resources/templates/JYPages/jyMemberPages/jyMemberMain.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<a href="/jy/member/save">회원가입</a>
-<a href="/jy/member/login">로그인</a>
+<h2>memberMain</h2>
+
 </body>
 </html>
