--- a/src/main/resources/templates/JYPages/jyMemberPages/jyMemberLogin.html
+++ b/src/main/resources/templates/JYPages/jyMemberPages/jyMemberLogin.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-
+<form action="/jy/member/login" method="post">
+    <input type="text" name="memberEmail" placeholder="이메일"> <br>
+    <input type="text" name="memberPassword" placeholder="패스워드"> <br>
+    <input type="submit" value="로그인">
+</form>
 </body>
 </html>
