--- a/src/main/resources/templates/SWPages/component/nav.html
+++ b/src/main/resources/templates/SWPages/component/nav.html
@@ -17,6 +17,10 @@
                     <a class="nav-link active" aria-current="page" href="/sw/member/login">로그인</a>
                 </li>
             </ul>
+            <div th:if="${session.loginEmail != null and session.loginEmail.length() != 0}">
+                <div th:text="${session.loginEmail + '님 반갑습니다'}"></div>
+                <a href="/sw/member/logout">로그아웃</a>
+            </div>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
