--- a/src/main/resources/templates/SWPages/index.html
+++ b/src/main/resources/templates/SWPages/index.html
@@ -7,9 +7,15 @@
 <div th:replace="SWPages/component/header :: header"></div>
 <div th:replace="SWPages/component/nav :: nav"></div>
 <div id="section">
-    <a href="/sw/member/save">회원가입</a>
-    <a href="/sw/member/login">로그인</a>
-    <a href="/sw/member/list">글 목록</a>
+    <div th:if="${session.loginEmail != null and session.loginEmail.length() != 0}">
+        <a href="/sw/member/memberDetail">MyPage</a>
+        <a href="/sw/member/logout">로그아웃</a>
+    </div>
+    <div th:unless="${session.loginEmail != null and session.loginEmail.length() != 0}">
+        <a href="/sw/member/save">회원가입</a>
+        <a href="/sw/member/login">로그인</a>
+        <a href="/sw/member/list">글 목록</a>
+    </div>
 </div>
 <div th:replace="SWPages/component/footer :: footer"></div>
 </body>
