km memberProfileFile save setting

--- a/src/main/resources/templates/KMPages/kmComponent/kmNav.html
+++ b/src/main/resources/templates/KMPages/kmComponent/kmNav.html
@@ -20,7 +20,7 @@
             <a href="/kmMember/login">로그인</a>
         </li>
         <li>
-            <a href="/kmMember/login">회원목록</a>
+            <a href="/kmMember/list">회원목록</a>
         </li>
         <li class="login-area" id="login-area">
         </li>
