--- a/src/main/resources/templates/KMPages/kmMemberPages/kmMemberSave.html
+++ b/src/main/resources/templates/KMPages/kmMemberPages/kmMemberSave.html
@@ -13,8 +13,8 @@
         <input type="text" name = "memberPass" placeholder="비밀번호">
         <input type="text" name = "memberName" placeholder="이름">
         <input type="text" name = "memberMobile" placeholder="전화번호">
+        <input type="date" name = "memberBirth">
         <input type="file" name="memberFile" class="form-control" >
-
         <input type="submit"  value="회원가입">
 
     </form>
