--- a/src/main/resources/templates/KMPages/kmComponent/kmConfig.html
+++ b/src/main/resources/templates/KMPages/kmComponent/kmConfig.html
@@ -4,7 +4,7 @@
 <th:block th:fragment="kmConfig">
     <meta charset="UTF-8">
     <title> 게시판</title>
-    <link rel="stylesheet" th:href="@{/css/main.css}">
+    <link rel="stylesheet" th:href="@{/css/kmCss/kmmain.css}">
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
