--- a/src/main/resources/templates/KMPages/kmMemberPages/kmMemberMain.html
+++ b/src/main/resources/templates/KMPages/kmMemberPages/kmMemberMain.html
@@ -7,10 +7,7 @@
 <div th:replace="KMPages/kmComponent/kmHeader"></div>
 <div th:replace="KMPages/kmComponent/kmNav"></div>
 <div id="section">
-    <div id="baseMenu">
-        <a href="/kmMember/save">회원가입</a>
-        <a href="/kmMember/list">회원목록</a>
-    </div>
+    <h2>memberMain</h2>
 </div>
 <div th:replace="KMPages/kmComponent/kmFooter"></div>
 
