--- a/src/main/resources/templates/HSPages/hsMemberPages/hsMemberSave.html
+++ b/src/main/resources/templates/HSPages/hsMemberPages/hsMemberSave.html
@@ -1,92 +1,281 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <th:block th:replace="HSPages/hsComponent/hsConfig :: config"></th:block>
+    <th:block th:replace="HSPages/hsComponent/hsConfig :: config"></th:block>
 </head>
 <body>
 <div th:replace="HSPages/hsComponent/hsComponent :: header"></div>
 <div th:replace="HSPages/hsComponent/hsComponent :: nav"></div>
 <section>
-  <div>
-    <h2 style="text-align: center">안녕 나는 회원가입</h2>
-    <form action="/hsMember/save" method="post" enctype="multipart/form-data">
-      <table>
-        <tr>
-          <td><label style="font-weight: bold;" for="memberEmail">아이디</label></td>
-        </tr>
-        <tr>
-          <th><input type="text" name="memberEmail" id="memberEmail"></th>
-        </tr>
-        <tr>
-          <td><label style="font-weight: bold;" for="memberPassword">비밀번호</label></td>
-        </tr>
-        <tr>
-          <th><input type="password" name="memberPassword" id="memberPassword"></th>
-        </tr>
-        <tr>
-          <td><label style="font-weight: bold;" for="memberPassword1">비밀번호 확인</label></td>
-        </tr>
-        <tr>
-          <th><input type="password" name="memberPassword1" id="memberPassword1"></th>
-        </tr>
-        <tr>
-          <td><label style="font-weight: bold;" for="memberName">이름</label></td>
-        </tr>
-        <tr>
-          <th><input type="text" id="memberName" name="memberName"></th>
-        </tr>
-        <tr>
-          <td><label style="font-weight: bold;" for="memberNum1">전화번호</label></td>
-        </tr>
-        <tr>
-          <th>
-            <select name="memberNum1" id="memberNum1">
-              <option value="">선택</option>
-              <option value="010">010</option>
-              <option value="011">011</option>
-              <option value="070">070</option>
-            </select>
-            <input type="text" maxlength="4" name="memberNum2" id="memberNum2">
-            <input type="text" maxlength="4" name="memberNum3" id="memberNum3">
-          </th>
-        </tr>
-        <tr>
-          <td><label style="font-weight: bold;" for="memberYY">생일</label></td>
-        </tr>
-        <tr>
-          <th>
-            <input type="text" name="memberYY" id="memberYY" maxlength="4">
-            <select name="memberMM" id="memberMM">
-              <option value="">선택</option>
-              <option value="01">1월</option>
-              <option value="02">2월</option>
-              <option value="03">3월</option>
-              <option value="04">4월</option>
-              <option value="05">5월</option>
-              <option value="06">6월</option>
-              <option value="07">7월</option>
-              <option value="08">8월</option>
-              <option value="09">9월</option>
-              <option value="10">10월</option>
-              <option value="11">11월</option>
-              <option value="12">12월</option>
-            </select>
-            <input type="text" name="memberDD" id="memberDD" maxlength="2">
-          </th>
-        </tr>
-        <tr>
-          <td><label style="font-weight: bold;" for="memberFile">프로필</label></td>
-        </tr>
-        <tr>
-          <th><input type="file" name="memberFile" id="memberFile"></th>
-        </tr>
-        <tr>
-          <th><button type="submit" id="memberSaveBtn">회원가입</button></th>
-        </tr>
-      </table>
-    </form>
-  </div>
+    <div>
+        <h2 style="text-align: center">안녕 나는 회원가입</h2>
+        <form action="/hsMember/save" method="post" enctype="multipart/form-data" onsubmit="return subCheck()">
+            <table>
+                <tr>
+                    <td style="width: 240px;"><label style="font-weight: bold;" for="memberEmail">아이디</label></td>
+                </tr>
+                <tr>
+                    <th>
+                        <input type="text" name="memberEmail" id="memberEmail" onblur="emailCheck()">
+                        <p style="text-align: left;font-size: 13px;" id="emailCheckResult"></p>
+                    </th>
+                </tr>
+                <tr>
+                    <td style="width: 240px;"><label style="font-weight: bold;" for="memberPassword">비밀번호</label></td>
+                </tr>
+                <tr>
+                    <th>
+                        <input type="password" name="memberPassword" id="memberPassword" onblur="passCheck()">
+                        <p style="text-align: left;font-size: 13px;" id="passCheckResult"></p>
+                    </th>
+                </tr>
+                <tr>
+                    <td style="width: 240px;"><label style="font-weight: bold;" for="memberPassword1">비밀번호 확인</label></td>
+                </tr>
+                <tr>
+                    <th>
+                        <input type="password" name="memberPassword1" id="memberPassword1" onblur="pass1Check()">
+                        <p style="text-align: left;font-size: 13px;" id="passCheckResult1"></p>
+                    </th>
+                </tr>
+                <tr>
+                    <td style="width: 240px;"><label style="font-weight: bold;" for="memberName">이름</label></td>
+                </tr>
+                <tr>
+                    <th>
+                        <input type="text" id="memberName" name="memberName" onblur="nameCheck()">
+                        <p style="text-align: left;font-size: 13px;" id="nameCheckResult"></p>
+                    </th>
+                </tr>
+                <tr>
+                    <td style="width: 240px;"><label style="font-weight: bold;" for="memberNum1">전화번호</label></td>
+                </tr>
+                <tr>
+                    <th>
+                        <select name="memberNum1" id="memberNum1" onblur="mobileCheck()">
+                            <option value="">선택</option>
+                            <option value="010">010</option>
+                            <option value="011">011</option>
+                            <option value="070">070</option>
+                        </select>
+                        <input type="text" maxlength="4" name="memberNum2" id="memberNum2" onblur="mobileCheck()">
+                        <input type="text" maxlength="4" name="memberNum3" id="memberNum3" onblur="mobileCheck()">
+                        <p style="text-align: left;font-size: 13px;" id="mobileCheckResult"></p>
+                    </th>
+                </tr>
+                <tr>
+                    <td style="width: 240px;"><label style="font-weight: bold;" for="memberYY">생일</label></td>
+                </tr>
+                <tr>
+                    <th>
+                        <input type="text" name="memberYY" id="memberYY" maxlength="4" onblur="birthCheck()">
+                        <select name="memberMM" id="memberMM" onblur="birthCheck()">
+                            <option value="">선택</option>
+                            <option value="01">1월</option>
+                            <option value="02">2월</option>
+                            <option value="03">3월</option>
+                            <option value="04">4월</option>
+                            <option value="05">5월</option>
+                            <option value="06">6월</option>
+                            <option value="07">7월</option>
+                            <option value="08">8월</option>
+                            <option value="09">9월</option>
+                            <option value="10">10월</option>
+                            <option value="11">11월</option>
+                            <option value="12">12월</option>
+                        </select>
+                        <input type="text" name="memberDD" id="memberDD" maxlength="2" onblur="birthCheck()">
+                        <p style="text-align: left;font-size: 13px;" id="birthCheckResult"></p>
+                    </th>
+                </tr>
+                <tr>
+                    <td style="width: 240px;"><label style="font-weight: bold;" for="memberFile">프로필</label></td>
+                </tr>
+                <tr>
+                    <th><input type="file" name="memberFile" id="memberFile"></th>
+                </tr>
+                <tr>
+                    <th>
+                        <button type="submit" id="memberSaveBtn">회원가입</button>
+                    </th>
+                </tr>
+            </table>
+        </form>
+    </div>
 </section>
 <div th:replace="HSPages/hsComponent/hsComponent :: footer"></div>
 </body>
+<script>
+    const memberEmail = document.getElementById('memberEmail');
+    const memberPassword = document.getElementById('memberPassword');
+    const memberPassword1 = document.getElementById('memberPassword1');
+    const memberName = document.getElementById('memberName');
+    const memberNum1 = document.getElementById('memberNum1');
+    const memberNum2 = document.getElementById('memberNum2');
+    const memberNum3 = document.getElementById('memberNum3');
+    const memberYY = document.getElementById('memberYY');
+    const memberMM = document.getElementById('memberMM');
+    const memberDD = document.getElementById('memberDD');
+
+    const subCheck = () => {
+        if(!emailCheck()) {
+            alert("아이디를 확인해주세요!");
+            memberEmail.focus();
+            return false;
+        } else if(!passCheck()){
+            alert("비밀번호를 확인해주세요!");
+            memberPassword.focus();
+            return false;
+        } else if (!pass1Check()){
+            alert("비밀번호를 확인해주세요!");
+            memberPassword1.focus();
+            return false;
+        } else if (!nameCheck()){
+            alert("이름을 입력해주세요!");
+            memberName.focus();
+            return false;
+        } else if (!mobileCheck()) {
+            alert("핸드폰 번화를 확인해주세요!");
+            if (memberNum1.value == ""){
+                memberNum1.focus();
+                return false;
+            } else if (memberNum2.value.length < 4){
+                memberNum2.focus();
+                return false;
+            } else if (memberNum3.value.length < 4) {
+                memberNum3.focus();
+                return false;
+            }
+        } else if (!birthCheck()) {
+            alert("생년월일을 확인해주세요!");
+            if (memberYY.value.length < 4) {
+                memberYY.focus();
+                return false;
+            } else if (memberMM.value == "") {
+                memberMM.focus();
+                return false;
+            } else if(memberDD.value.length <2) {
+                memberDD.focus();
+                return false;
+            }
+        } else {
+            return true;
+        }
+    }
+
+    const emailCheck = () => {
+        const emailCheckResult = document.getElementById('emailCheckResult');
+        const exp = /^[a-z0-9_-]{5,20}$/;
+        let Result = "";
+        axios({
+            method: "post",
+            url: "/hsMember/emailCheck",
+            data: {
+                memberEmail: memberEmail.value
+            }
+        }).then(res => {
+            if (memberEmail.value.length == 0) {
+                emailCheckResult.style.color = "red";
+                emailCheckResult.innerHTML = "필수 정보입니다.";
+                Result = false;
+            } else if(!(memberEmail.value.match(exp))){
+                emailCheckResult.style.color = "red";
+                emailCheckResult.innerHTML = "5~20자의 영문 소문자, 숫자와 특수기호(_),(-)만사용 가능합니다.";
+                Result = false;
+            } else {
+                emailCheckResult.style.color = "green";
+                emailCheckResult.innerHTML = "좋은 아이디네요!";
+                Result = true;
+            }
+        }).catch(err => {
+            emailCheckResult.style.color = "red";
+            emailCheckResult.innerHTML = "이미 사용중이거나 탈퇴한 아이디입니다.";
+            Result = false;
+        })
+        return Result;
+    }
+    const passCheck = () => {
+        const passCheckResult = document.getElementById('passCheckResult');
+        const exp = /^(?=.*[a-zA-Z])(?=.*\d)(?=.*[@#$%^&+=!])(?!.*\s).{8,16}$/
+        if (memberPassword.value.length ==0 ){
+            passCheckResult.style.color = "red";
+            passCheckResult.innerHTML = "필수 정보입니다.";
+            return false;
+        } else if (!(memberPassword.value.match(exp))) {
+            passCheckResult.style.color = "red";
+            passCheckResult.innerHTML = "8~16자 영문 대 소문자, 숫자, 특수문자를 사용하세요.";
+            return false;
+        } else {
+            passCheckResult.style.color = "green";
+            passCheckResult.innerHTML = "안전";
+            return true;
+        }
+    }
+    const pass1Check = () => {
+      const passCheckResult1 = document.getElementById('passCheckResult1');
+      if (memberPassword.value.length == 0){
+          passCheckResult1.style.color = "red";
+          passCheckResult1.innerHTML = "필수 사항입니다.";
+          return false;
+      } else if (memberPassword != memberPassword1) {
+          passCheckResult1.style.color = "red";
+          passCheckResult1.innerHTML = "비밀번호를 확인해주세요!";
+          return false;
+      } else {
+          passCheckResult1.style.color = "green";
+          passCheckResult1.innerHTML = "안전";
+          return true;
+      }
+    }
+    const nameCheck = () => {
+      const nameCheckResult = document.getElementById('nameCheckResult');
+      if (memberName.value.length == 0) {
+          nameCheckResult.style.color = "red";
+          nameCheckResult.innerHTML = "필수 정보입니다.";
+          return false;
+      } else {
+          return true;
+      }
+    }
+    const mobileCheck = () => {
+        const mobileCheckResult = document.getElementById('mobileCheckResult');
+        if (memberNum1.value == ""){
+            mobileCheckResult.style.color = "red";
+            mobileCheckResult.innerHTML = "핸드폰 번호를 정확하게 입력해주세요";
+            return false;
+        } else if (memberNum2.value.length < 4) {
+            mobileCheckResult.style.color = "red";
+            mobileCheckResult.innerHTML = "핸드폰 번호를 정확하게 입력해주세요";
+            return false;
+        } else if (memberNum3.value.length < 4) {
+            mobileCheckResult.style.color = "red";
+            mobileCheckResult.innerHTML = "핸드폰 번호를 정확하게 입력해주세요";
+            return false;
+        } else {
+            mobileCheckResult.style.color = "green";
+            mobileCheckResult.innerHTML = "";
+            return true;
+        }
+    }
+    const birthCheck = () => {
+        const birthCheckResult = document.getElementById('birthCheckResult');
+        if (memberYY.value.length < 4) {
+            birthCheckResult.style.color = "red";
+            birthCheckResult.innerHTML = "태어난 년도 4자리를 정확하게 입력하세요.";
+            return false;
+        } else if (memberMM.value == "") {
+            birthCheckResult.style.color = "red";
+            birthCheckResult.innerHTML = "태어난 월을 선택하세요";
+            return false;
+        } else if (memberDD.value.length <2){
+            birthCheckResult.style.color = "red";
+            birthCheckResult.innerHTML = "태어난 일(날짜) 2자리를 정확하게 입력하세요.";
+            return false;
+        } else {
+            birthCheckResult.style.color = "green";
+            birthCheckResult.innerHTML = "";
+            return true;
+        }
+    }
+</script>
 </html>
