--- a/src/main/resources/templates/KMPages/kmMemberPages/kmMemberSave.html
+++ b/src/main/resources/templates/KMPages/kmMemberPages/kmMemberSave.html
@@ -14,7 +14,7 @@
         <input type="text" name = "memberName" placeholder="이름">
         <input type="text" name = "memberMobile" placeholder="전화번호">
         <input type="date" name = "memberBirth">
-        <input type="file" name="memberFile" class="form-control" >
+        <input type="file" name="memberProfileFile" class="form-control" >
         <input type="submit"  value="회원가입">
 
     </form>
