--- a/src/main/resources/templates/JYPages/jyMemberPages/jyMemberMyPage.html
+++ b/src/main/resources/templates/JYPages/jyMemberPages/jyMemberMyPage.html
@@ -77,7 +77,9 @@
         if (clickButtonId === "member-update") {
           location.href = "/jy/member/update/" + id;
         } else if (clickButtonId === "member-delete") {
-          // location.href = "/jy/member/delete/" + id;
+          if (confirm("정말 탈퇴하시겠습니까?") == true ) {
+            location.href = "/jy/member/delete/" + id;
+          }
         }
       } else {
         alert("비밀번호 확인필요");
