km login&saveDuple chk complete

--- a/src/main/resources/templates/KMPages/index.html
+++ b/src/main/resources/templates/KMPages/index.html
@@ -9,6 +9,7 @@
 <div id="section">
     <div id="baseMenu">
         <a href="/kmMember/save">회원가입</a>
+        <a href="/kmMember/login">로그인</a>
         <a href="/kmMember/list">회원목록</a>
     </div>
 </div>
