myPage 수정, 삭제 작성완료

--- a/src/main/resources/templates/YHPages/yhMemberPages/yhMyPage.html
+++ b/src/main/resources/templates/YHPages/yhMemberPages/yhMyPage.html
@@ -69,6 +69,7 @@
         const memberId = "[[${memberDTO.id}]]";
         const memberEmail = "[[${memberDTO.memberEmail}]]";
         const memberMobile = "[[${memberDTO.memberMobile}]]";
+        const memberBirth = "[[${memberDTO.memberBirth}]]"
         console.log(method);
         if (checkPassInput.value === memberPassword) {
             if (method == "update") {
@@ -76,16 +77,18 @@
                     url: "/yhMember/updateForm",
                     method: "post"
                 }).then(res => {
-                    let result = `<form id="updateForm" onsubmit="updateMember(event)" name="updateForm" action="/yhMember/update" method="post" enctype="multipart/form-data">
-                    <input type="text" style="display: none" value="${memberId}">
+                    let result = `<form id="updateForm" onsubmit="updateMember(event)"  name="updateForm" action="/yhMember/update" method="put" enctype="multipart/form-data">
+                    <input id="memberId" type="text" style="display: none" value="${memberId}">
                     <label for="memberName">이름</label>
                     <input type="text" name="memberName" id="memberName" value="${memberName}" readonly><br>
                     <label for="memberEmail">이메일</label>
-                    <input type="text" name="memberEmail" id="memberEmail" value="${memberEmail}"><br>
+                    <input type="text" name="memberEmail" id="memberEmail" value="${memberEmail}" readonly><br>
                     <label for="memberPassword">비밀번호</label>
-                    <input type="password" name="memberPassword" id="memberPassword" value="${memberMobile}"><br>
-                    <label for="memberMoblie">전화번호</label>
-                    <input type="text" name="memberMoblie" id="memberMoblie" value="${memberMobile}"><br>
+                    <input type="password" name="memberPassword" id="memberPassword" value="${memberPassword}"><br>
+                    <label for="memberMobile">전화번호</label>
+                    <input type="text" name="memberMobile" id="memberMobile" value="${memberMobile}"><br>
+                    <label for="memberBirth">생년월일</label>
+                    <input type="text" name="memberBirth" id="memberBirth" value="${memberBirth}"><br>
 <!--                    <label for="memberProfile">프로필사진</label>-->
 <!--                    <input type="file" id="memberProfile" name="memberProfile" class="form-control" multiple><br>-->
                     <input type="submit" value="업데이트하기">
@@ -96,18 +99,51 @@
                     console.log("err" + err);
                 })
             } else if (method == "delete") {
-                // 삭제 관련 코드 작성
+                axios({
+                    url: "/yhMember/" + memberId,
+                    method: "delete"
+                }).then(res => {
+                    location.href = "/yhMember/login";
+                    alert("삭제 성공");
+                }).catch(err => {
+                    alert("삭제 실패");
+                })
             }
         } else {
             alert("비밀번호가 틀렸습니다.");
         }
     }
 
+    const updateMember = (event) => {
+        event.preventDefault();
+        const memberId = document.querySelector("#memberId").value;
+        const memberName = "[[${memberDTO.memberName}]]";
+        const memberEmail = document.querySelector("#memberEmail").value;
+        const memberPassword = document.querySelector("#memberPassword").value;
+        const memberMobile = document.querySelector("#memberMobile").value;
+        const memberBirth = document.querySelector("#memberBirth").value;
+        axios({
+            url: "/yhMember/update",
+            method: "put",
+            data: {
+                id: memberId,
+                memberName: memberName,
+                memberEmail: memberEmail,
+                memberPassword: memberPassword,
+                memberMobile: memberMobile,
+                memberBirth: memberBirth
+            }
+        }).then(res => {
+            alert("업데이트에 성공하셨습니다");
+            location.href = "/yhMember/myPage"
+        }).catch(err => {
+            alert("업데이트에 실패하셨습니다");
+        })
+    }
     const hiddenexample = () => {
         const updateArea = document.querySelector("#updateArea");
         updateArea.innerHTML = "";
     }
-
 </script>
 </body>
 </html>
