board_saveForm 띄우기

--- a/src/main/resources/templates/JYPages/jyMemberPages/jyMemberMain.html
+++ b/src/main/resources/templates/JYPages/jyMemberPages/jyMemberMain.html
@@ -7,6 +7,7 @@
 <body>
 <h2>memberMain</h2>
 <a href="/jy/member/mypage">마이페이지</a>
+<a href="/jy/board/save">글작성</a>
 <a href="/jy/member/logout">로그아웃</a>
 </body>
 </html>
