--- a/src/main/resources/templates/JYPages/jyBoardPages/jyBoardSave.html
+++ b/src/main/resources/templates/JYPages/jyBoardPages/jyBoardSave.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -8,7 +8,7 @@
 <h2>boardSave</h2>
 <form action="/jy/board/save" method="post">
     <input type="text" name="boardTitle" placeholder="글 제목"> <br>
-    <input type="text" name="boardWriter" placeholder="글 작성자"> <br>
+    <input type="text" name="boardWriter" placeholder="글 작성자" th:value="${session.loginEmail}" readonly> <br>
     <textarea name="boardContents" id="" cols="30" rows="10" placeholder="글 내용"></textarea> <br>
     <input type="file" name="boardFile" multiple> <br>
     <input type="submit" value="작성">
