--- a/src/main/resources/templates/YHPages/yhMemberPages/yhMemberLogin.html
+++ b/src/main/resources/templates/YHPages/yhMemberPages/yhMemberLogin.html
@@ -3,8 +3,8 @@
 <head>
     <th:block th:replace="/YHPages/yhComponent/yhConfig :: config"></th:block>
 </head>
+<th:block th:replace="/YHPages/yhComponent/yhHeader :: header"></th:block>
 <body>
-
 <div id="loginForm">
     <label for="memberEmail">이메일입력</label>
     <input type="text" id="memberEmail" name="memberEmail"><br>
