--- a/src/main/resources/templates/YHPages/yhMemberPages/yhMyPage.html
+++ b/src/main/resources/templates/YHPages/yhMemberPages/yhMyPage.html
@@ -4,6 +4,7 @@
     <th:block th:replace="/YHPages/yhComponent/yhConfig :: config"></th:block>
 </head>
 <body>
+<th:block th:replace="/YHPages/yhComponent/yhHeader :: header"></th:block>
 <div>
     <table class="table table-striped table-hover text-center">
         <thead>
