--- a/src/main/resources/templates/JYPages/jyBoardPages/jyBoardSave.html
+++ b/src/main/resources/templates/JYPages/jyBoardPages/jyBoardSave.html
@@ -6,12 +6,18 @@
 </head>
 <body>
 <h2>boardSave</h2>
-<form action="/jy/board/save" method="post">
+<form action="/jy/board/save" method="post" enctype="multipart/form-data">
     <input type="text" name="boardTitle" placeholder="글 제목"> <br>
     <input type="text" name="boardWriter" placeholder="글 작성자" th:value="${session.loginEmail}" readonly> <br>
     <textarea name="boardContents" id="" cols="30" rows="10" placeholder="글 내용"></textarea> <br>
     <input type="file" name="boardFile" multiple> <br>
     <input type="submit" value="작성">
 </form>
+<button onclick="back()">뒤로</button>
 </body>
+<script>
+    const back = () => {
+        location.href = "/jy/member/main";
+    }
+</script>
 </html>
