--- a/src/main/resources/templates/SWPages/boardPages/boardSave.html
+++ b/src/main/resources/templates/SWPages/boardPages/boardSave.html
@@ -8,28 +8,28 @@
 <div th:replace="SWPages/component/nav :: nav"></div>
 <div id="section">
     <div class="container">
-        <form action="#" method="post" enctype="multipart/form-data">
+        <form action="/sw/board/save" method="post" enctype="multipart/form-data">
             <fieldset>
                 <legend>글 작성</legend>
                 <div class="form-floating mb-3">
-                    <input type="email" class="form-control" id="board-writer" name="boardWriter"
-                           th:value="${memberDTO.memberName}" readonly>
+                    <input type="text" class="form-control" id="board-writer" name="boardWriter"
+                           th:value="${memberName}" readonly>
                     <label for="board-writer">작성자</label>
                 </div>
                 <div class="form-floating mb-3">
-                    <input type="email" class="form-control" id="board-title" name="boardTitle" placeholder="글 제목">
+                    <input type="text" class="form-control" id="board-title" name="boardTitle" placeholder="글 제목">
                     <label for="board-title">글 제목</label>
                 </div>
                 <div class="form-floating mb-3">
-                    <textarea class="form-control"></textarea>
+                    <textarea class="form-control h-25" rows="10" name="boardContents"></textarea>
                     <label for="board-title">글 내용</label>
                 </div>
                 <div class="form-floating mb-3">
                     <input type="file" class="form-control" id="board-file" name="swBoardFile">
                     <label for="board-title">사진 첨부</label>
                 </div>
-                <input type="submit" id="submit-input">
-                <button onclick="back()">뒤로가기</button>
+                <input type="submit" id="submit-input" class="btn btn-primary">
+                <button class="btn btn-danger" onclick="back()">뒤로가기</button>
             </fieldset>
         </form>
     </div>
