--- a/src/main/resources/templates/SWPages/component/config.html
+++ b/src/main/resources/templates/SWPages/component/config.html
@@ -3,7 +3,7 @@
 
 <th:block th:fragment="config">
   <meta charset="UTF-8">
-  <title>Tema Project Board</title>
+  <title>Team Project Board</title>
   <link rel="stylesheet" th:href="@{/css/swmain.css}">
   <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -13,7 +13,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script th:src="@{/js/axios.min.js}"></script>
-
 </th:block>
 <body>
 
