--- a/src/main/resources/static/css/kmCss/kmmain.css
+++ b/src/main/resources/static/css/kmCss/kmmain.css
@@ -22,6 +22,7 @@ ul {
     /*display: inline;*/
     padding: 10px 100px;
     background-color: #363945;
+    color: white;
     font-weight: bold;
     /*width: 800px;*/
     height: 50px;
@@ -29,11 +30,18 @@ ul {
     /*align-items: center;*/
     font-family: 'Noto Sans KR', sans-serif;
 }
-#nav ul {
-    margin: 0px;
-}
+/*#nav ul {*/
+/*    margin: 0px;*/
+/*}*/
 #nav li {
     float: left;
+}
+#nav ul li {
+    display: inline-block;
+    margin-right: 3px; /* 우측 간격 조절 */
+}
+#nav #login-area {
+    float: right;
 }
 
 #footer{
