--- a/src/main/resources/templates/SWPages/boardPages/boardSave.html
+++ b/src/main/resources/templates/SWPages/boardPages/boardSave.html
@@ -8,7 +8,7 @@
 <div th:replace="SWPages/component/nav :: nav"></div>
 <div id="section">
     <div class="container">
-        <form action="/sw/board/save" method="post" enctype="multipart/form-data">
+        <form action="/sw/board/boardSave" method="post" enctype="multipart/form-data">
             <fieldset>
                 <legend>글 작성</legend>
                 <div class="form-floating mb-3">
@@ -25,7 +25,7 @@
                     <label for="board-title">글 내용</label>
                 </div>
                 <div class="form-floating mb-3">
-                    <input type="file" class="form-control" id="board-file" name="swBoardFile">
+                    <input type="file" class="form-control" id="board-file" name="swBoardFile" multiple>
                     <label for="board-title">사진 첨부</label>
                 </div>
                 <input type="submit" id="submit-input" class="btn btn-primary">
