--- a/src/main/resources/templates/SWPages/component/nav.html
+++ b/src/main/resources/templates/SWPages/component/nav.html
@@ -22,10 +22,10 @@
                     <a class="nav-link active" aria-current="page" href="/SWPages"><i class="bi bi-house"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/sw/board/save">글 쓰기</a>
+                    <a class="nav-link active" aria-current="page" href="/sw/board/boardSave">글 쓰기</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">글 목록</a>
+                    <a class="nav-link active" aria-current="page" href="/sw/board/boardList">글 목록</a>
                 </li>
             </ul>
             <div th:if="${session.loginEmail != null and session.loginEmail.length() != 0}">
