--- a/src/main/resources/templates/KMPages/kmBoardPages/kmBoardList.html
+++ b/src/main/resources/templates/KMPages/kmBoardPages/kmBoardList.html
@@ -8,6 +8,28 @@
 <div th:replace="KMPages/kmComponent/kmNav"></div>
 <div id="section">
 <h2>Board list.html</h2>
+    <table>
+        <tr>
+            <th>글번호</th>
+            <th>글제목</th>
+            <th>작성자</th>
+            <th>내용</th>
+            <th>작성날짜</th>
+            <th>파일유무</th>
+            <th>조회수</th>
+        </tr>
+        <tr th:each="board:${boardList}">
+            <td th:text="${board.id}"></td>
+            <td th:text="${board.boardTitle}"></td>
+            <td th:text="${board.boardWriter}"></td>
+            <td th:text="${board.boardContents}"></td>
+            <td th:text="${board.boardCreatedAt}"></td>
+            <td th:text="${board.boardFileAttached}"></td>
+            <td th:text="${board.boardHits}"></td>
+            <!--        <td th:text="*{#temporals.format(board.createdAt,'yyyy-MM-dd HH:mm:ss')}"></td>-->
+
+        </tr>
+    </table>
 
 </div>
 <div th:replace="KMPages/kmComponent/kmFooter"></div>
