--- a/src/main/resources/templates/KMPages/kmBoardPages/kmBoardList.html
+++ b/src/main/resources/templates/KMPages/kmBoardPages/kmBoardList.html
@@ -20,7 +20,7 @@
         </tr>
         <tr th:each="board:${boardList}">
             <td th:text="${board.id}"></td>
-            <td th:text="${board.boardTitle}"></td>
+            <td><a th:href="@{|/kmBoard/boardDetail/${board.id}|}" th:text="${board.boardTitle}"></a></td>
             <td th:text="${board.boardWriter}"></td>
             <td th:text="${board.boardContents}"></td>
             <td th:text="${board.boardCreatedAt}"></td>
